adding deleteAnswer call to swagger
