# storage/api-docs/api-docs.json
@@ -15,7 +15,7 @@
         "/questions/{questionId}/answers": {
             "post": {
                 "tags": [
-                    "answers"
+                    "Answers"
                 ],
                 "summary": "create a  answer ",
                 "description": "Create a an answer for a specific question",
@@ -66,6 +66,45 @@
                         "name": "answerId",
                         "in": "path",
                         "description": "Id of an answer for a given question",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Bearer TOKEN",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "succes: true"
+                    },
+                    "422": {
+                        "description": "The given data was invalid"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Answers"
+                ],
+                "summary": "delete an answer for a given question",
+                "description": "Delete an answer for a given question",
+                "operationId": "deleteAnswer",
+                "parameters": [
+                    {
+                        "name": "questionId",
+                        "in": "path",
+                        "description": "question Id",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "answerId",
+                        "in": "path",
+                        "description": "Answer Id",
                         "required": true,
                         "type": "string"
                     },
